--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
+  "name": "elementx-ui",
   "dependencies": {
-    "core-js": "3",
-    "element-ui": "^2.8.2",
-    "sortablejs": "^1.9.0",
+    "core-js": "3.1.4",
+    "element-ui": "^2.9.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11",
-    "@storybook/vue": "^5.0.11",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addon-notes": "^5.1.9",
+    "@storybook/addon-storysource": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/vue": "^5.1.9",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
+    "lerna": "^3.15.0",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "bootstrap": "npx lerna bootstrap --hoist"
   }
 }
